feat: Implement CountertradeRemedialAction and CounterTradingActionCreator for handling counter trading actions
Signed-off-by: vcardozo <victor.cardozo@artelys.com>