@@ -34,6 +34,7 @@ import com.powsybl.openrao.data.crac.api.cnec.VoltageCnec;
 import com.powsybl.openrao.data.crac.api.networkaction.ActionType;
 import com.powsybl.openrao.data.crac.api.networkaction.NetworkAction;
 import com.powsybl.openrao.data.crac.api.parameters.CracCreationParameters;
+import com.powsybl.openrao.data.crac.api.rangeaction.CounterTradeRangeAction;
 import com.powsybl.openrao.data.crac.api.rangeaction.PstRangeAction;
 import com.powsybl.openrao.data.crac.api.threshold.BranchThreshold;
 import com.powsybl.openrao.data.crac.api.threshold.Threshold;
@@ -59,10 +60,7 @@ import java.util.Properties;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * @author Mohamed Ben Rejeb {@literal <mohamed.ben-rejeb at rte-france.com>}
@@ -198,7 +196,7 @@ public final class NcCracCreationTestUtil {
         assertEquals(expectedImportingNetworkElementId, angleCnec.getImportingNetworkElement().getId());
         assertEquals(expectedExportingNetworkElementId, angleCnec.getExportingNetworkElement().getId());
 
-        Threshold threshold = angleCnec.getThresholds().stream().toList().iterator().next();
+        Threshold threshold = angleCnec.getThresholds().stream().toList().getFirst();
         assertEquals(expectedThresholdMax, threshold.max().orElse(null));
         assertEquals(expectedThresholdMin, threshold.min().orElse(null));
     }
@@ -222,7 +220,7 @@ public final class NcCracCreationTestUtil {
             expectedBorder
         );
 
-        Threshold threshold = voltageCnec.getThresholds().stream().toList().iterator().next();
+        Threshold threshold = voltageCnec.getThresholds().stream().toList().getFirst();
         assertEquals(expectedThresholdMax, threshold.max().orElse(null));
         assertEquals(expectedThresholdMin, threshold.min().orElse(null));
     }
@@ -300,7 +298,7 @@ public final class NcCracCreationTestUtil {
         assertEquals(raName, networkAction.getName());
         assertEquals(1, networkAction.getElementaryActions().size());
         Action elementaryAction = networkAction.getElementaryActions().iterator().next();
-        assertTrue(elementaryAction instanceof SwitchAction);
+        assertInstanceOf(SwitchAction.class, elementaryAction);
         assertEquals(switchId, ((SwitchAction) elementaryAction).getSwitchId());
         assertEquals(actionType == ActionType.OPEN, ((SwitchAction) elementaryAction).isOpen());
         assertEquals(expectedOperator, networkAction.getOperator());
@@ -316,7 +314,7 @@ public final class NcCracCreationTestUtil {
         assertEquals(raName, networkAction.getName());
         assertEquals(1, networkAction.getElementaryActions().size());
         Action elementaryAction = networkAction.getElementaryActions().iterator().next();
-        assertTrue(elementaryAction instanceof GeneratorAction);
+        assertInstanceOf(GeneratorAction.class, elementaryAction);
         assertEquals(networkElementId, ((GeneratorAction) elementaryAction).getGeneratorId());
         assertEquals(setpoint, ((GeneratorAction) elementaryAction).getActivePowerValue().getAsDouble());
         assertEquals(expectedOperator, networkAction.getOperator());
@@ -332,7 +330,7 @@ public final class NcCracCreationTestUtil {
         assertEquals(raName, networkAction.getName());
         assertEquals(1, networkAction.getElementaryActions().size());
         Action elementaryAction = networkAction.getElementaryActions().iterator().next();
-        assertTrue(elementaryAction instanceof LoadAction);
+        assertInstanceOf(LoadAction.class, elementaryAction);
         assertEquals(networkElementId, ((LoadAction) elementaryAction).getLoadId());
         assertEquals(setpoint, ((LoadAction) elementaryAction).getActivePowerValue().getAsDouble());
         assertEquals(expectedOperator, networkAction.getOperator());
@@ -348,7 +346,7 @@ public final class NcCracCreationTestUtil {
         assertEquals(raName, networkAction.getName());
         assertEquals(1, networkAction.getElementaryActions().size());
         Action elementaryAction = networkAction.getElementaryActions().iterator().next();
-        assertTrue(elementaryAction instanceof ShuntCompensatorPositionAction);
+        assertInstanceOf(ShuntCompensatorPositionAction.class, elementaryAction);
         assertEquals(networkElementId, ((ShuntCompensatorPositionAction) elementaryAction).getShuntCompensatorId());
         assertEquals(setpoint, ((ShuntCompensatorPositionAction) elementaryAction).getSectionCount());
         assertEquals(expectedOperator, networkAction.getOperator());
@@ -368,8 +366,21 @@ public final class NcCracCreationTestUtil {
         if (expectedMinTap == null && expectedMaxTap == null) {
             return;
         }
-        assertEquals(expectedMinTap == null ? Integer.MIN_VALUE : expectedMinTap, pstRangeAction.getRanges().get(0).getMinTap());
-        assertEquals(expectedMaxTap == null ? Integer.MAX_VALUE : expectedMaxTap, pstRangeAction.getRanges().get(0).getMaxTap());
+        assertEquals(expectedMinTap == null ? Integer.MIN_VALUE : expectedMinTap, pstRangeAction.getRanges().getFirst().getMinTap());
+        assertEquals(expectedMaxTap == null ? Integer.MAX_VALUE : expectedMaxTap, pstRangeAction.getRanges().getFirst().getMaxTap());
+    }
+
+    public static void assertCounterTradeRangeActionsImported(CounterTradeRangeAction counterTradeRangeAction,
+                                                              String expectedId,
+                                                              String expectedName,
+                                                              double expectedMaxRegulatingUp,
+                                                              double expectedMaxRegulatingDown,
+                                                              String expectedOperator) {
+        assertEquals(expectedId, counterTradeRangeAction.getId());
+        assertEquals(expectedName, counterTradeRangeAction.getName());
+        assertEquals(expectedOperator, counterTradeRangeAction.getOperator());
+        assertEquals(expectedMaxRegulatingUp, counterTradeRangeAction.getRanges().getFirst().getMax());
+        assertEquals(expectedMaxRegulatingDown, counterTradeRangeAction.getRanges().getFirst().getMin());
     }
 
     public static NcCracCreationContext getNcCracCreationContext(String ncArchive, CracCreationParameters cracCreationParameters) {
